              pixel movement.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              anytopnm: recognize "PC bitmap" in 'file' response as BMP.
              (in addition to existing "PC bitmap data").

              libnetpbm, various PBM programs: Use SSE insted of MMX.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamarith: fix memory leak.

              pnm_bytespersample(): fix bogus assertion on 64 bit system.

              pnmtops: fix bug: 12 bits per sample output when 8 would do.
              Introduced in 10.40.

              palmtopnm: fix for pixel size 16.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmsmooth: Fail politely when convolution matrix is so
              large as to bust the system's program parameter size limit
              on the invocation of pnmconvol.

              avstopam: fix incorrect output.

              pnmsmooth: fix arithmetic overflow with absurdly large
              convolution matrix dimensions.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmsmooth: fix wild pointer: causes wrong arguments to
              'pnmconvol'.  Introduced in 10.50.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pamscale: fix -reduce.  Introduced in 10.27.

              pampaintspill: fix incorrect output.

              build: fix incorrect determination of when vasprintf() exists
              in libc.

              configure: don't default to /usr/X11R6/lib/libX11.so just because
              /usr/X11R6 exists.  /usr/X11R6/lib must exist.

10.03.27 BJH  Release 10.50.00

              Add pamtoavs, avstopam.  Thanks Scott Pakin.

              Add pampaintspill.

              pnmconvol: Add -normalize .

              pm_system(): Close extraneous file descriptors that, among
              other things, prevent child from seeing EOF.

              libnetpbm: Add PNM_GETR(), PNM_GETG(), PNM_GETB().  Same